--- a/web/public/index.html
+++ b/web/public/index.html
@@ -16,12 +16,13 @@
       rel="stylesheet"
       href="https://unpkg.com/bootstrap/dist/css/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="/web/dist/css/style.css" />
     <link
       type="text/css"
       rel="stylesheet"
       href="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.css"
     />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>La plata Floodn't</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es2015%2CIntersectionObserver"></script>
 
     <!-- Required scripts -->
